--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Welcome to My CV</h1>
     <p>This is where you can find my CV.</p>
+    <a href="https://github.com/wootenjp/CV/blob/main/Wooten%2C%20Jeffrey%2C%20P.%20CV.docx.pdf" target="_blank">View my CV</a>
 </body>
 </html>
