--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Welcome to My CV</h1>
     <p>This is where you can find my CV.</p>
-    <embed src="https://wootenjp.github.io/CV/docs/docs/Wooten%2C%20Jeffrey%2C%20P.%20CV.docx%20(1).pdf" type="application/pdf" width="100%" height="600px" />
+    <embed src="https://wootenjp.github.io/CV/docs/Wooten%2C%20Jeffrey%2C%20P.%20CV.docx%20(1).pdf" type="application/pdf" width="100%" height="600px" />
 </body>
 </html>
