--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Welcome to My CV</h1>
-    <p>This is where you can find my CV.</p>
-    <embed src="https://wootenjp.github.io/CV/Wooten,%20Jeffrey,%20P.%20CV.docx.pdf" type="application/pdf" width="100%" height="600px" />
+    <p>This is where you can view my live CV.</p>
+    <iframe src="https://docs.google.com/document/d/e/2PACX-1vRZF6SXdA8dorRZfGIL8IRlB2TssW6L6OYIs423F7MHjh75JZSYxbULIY1nQfENaw/pub?embedded=true" width="100%" height="600px"></iframe>
 </body>
 </html>
