--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Welcome to My CV</h1>
-    <p>This is where you can view my live CV.</p>
+    <p>I'm a doctoral candidate at VCU interested in school (de)segregation, machine learning, and policy implementations which can advance equitable long-term outcomes. I'm currently on the job market, pursuing opportunities which will allow me to, working independently and collaboratively, pursue these and related research interests.</p>
     <iframe src="https://docs.google.com/document/d/e/2PACX-1vRZF6SXdA8dorRZfGIL8IRlB2TssW6L6OYIs423F7MHjh75JZSYxbULIY1nQfENaw/pub?embedded=true" width="75%" height="600px"></iframe>
 </body>
 </html>
