--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My CV</title>
+    <title>Wooten, Jeffrey, P. CV</title>
 </head>
 <body>
     <h1>Welcome to My CV</h1>
