--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Welcome to My CV</h1>
-    <p>I'm a doctoral candidate at VCU interested in school (de)segregation, machine learning, and policy implementations which can advance equitable long-term outcomes. I'm currently on the job market, pursuing opportunities which will allow me to, working independently and collaboratively, pursue these and related research interests.</p>
+    <p>I'm a doctoral candidate at VCU, defending in summer 2025, interested in school (de)segregation, algorithmic redistricting and machine learning, as well as policy implementations which can advance equitable long-term outcomes. I'm currently on the job market, pursuing opportunities which will allow me to, working independently and collaboratively, pursue these and related research interests.</p>
     <iframe src="https://docs.google.com/document/d/e/2PACX-1vRZF6SXdA8dorRZfGIL8IRlB2TssW6L6OYIs423F7MHjh75JZSYxbULIY1nQfENaw/pub?embedded=true" width="100%" height="600px"></iframe>
 </body>
 </html>
